Prevent overlay controls from covering up content

--- a/src/frontend/index.scss
+++ b/src/frontend/index.scss
@@ -28,6 +28,10 @@ body {
   /* Frameless window defaults */
   --titlebar-color: var(--body-background);
   --titlebar-symbol-color: var(--accent);
+  --overlay-controls-height: env(titlebar-area-height, 36px);
+  --overlay-controls-width: calc(
+    100vw - env(titlebar-area-width, calc(100vw - 120px))
+  );
 }
 
 /* Overlay Scrollbar*/
